(feat) fix spacing for buttons

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,18 +48,19 @@
 .button {
   display: flex;
   justify-content: center;
+  align-content: center;
   align-items: center;
-  height: 7vmin;
-  padding-left: 15px;
-  padding-right: 15px;
+  height: 6vmin;
+  /*padding: 3px 7px;*/
   background-color: #83CC6D;
   border: none;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   color: #ffffff;
   text-decoration: none;
   cursor: pointer;
+  border: 2px;
   border-radius: 5px;
 }
 .button:hover {
@@ -74,7 +75,7 @@
   background-color: #83CC6D;
   border: none;
   margin: 5px;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   color: #ffffff;
@@ -101,6 +102,7 @@
 .room {
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-direction: row;
   font-size: 1.5rem;
   font-weight: 600;
@@ -110,16 +112,16 @@
 .codeInput {
   display: flex;
   background-color: #ffffff;
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   font-weight: 300;
   font-family: Arial, Helvetica, sans-serif;
   color: #83CC6D;
-  width: 15vw;
-  height: 6vmin;
-  padding: 3px 7px;
+  width: 20vw;
+  height: 5.5vmin;
   margin-right: 10px;
   border: 2px solid #83CC6D;
   border-radius: 5px;
+  text-align: center;
 }
 @media screen and (max-width: 700px) {
   .button, .questionButtons, .answerButtons, .codeInput {
@@ -154,6 +156,7 @@
 .questions {
   display: flex;
   flex-direction: column;
+  margin-top:10vmin;
   width: 90%;
 }
 .questions-container {
